errors.txt
[0/5] Performing build step for 'lagom'
ninja: no work to do.
[1/5] Performing install step for 'lagom'
-- Install configuration: ""
[2/5] Performing build step for 'serenity'
[0/2] Re-checking globbed directories...
[1/2462] cd /home/d4gobert/devel/serenity/Build/x86_64/Userland/Libraries/LibC && /home/d4gobert/devel/serenity/Toolchain/Local/x86_64/bin/x86_64-pc-serenity-gcc-ar -x /home/d4gobert/devel/serenity/Build/x86_64/Userland/Libraries/LibC/libLibCStaticWithoutDeps.a && /home/d4gobert/devel/serenity/Toolchain/Local/x86_64/bin/x86_64-pc-serenity-gcc-ar -x /home/d4gobert/devel/serenity/Build/x86_64/Userland/Libraries/LibSystem/libLibSystemStatic.a && /home/d4gobert/devel/serenity/Toolchain/Local/x86_64/bin/x86_64-pc-serenity-gcc-ar -x /home/d4gobert/devel/serenity/Build/x86_64/Userland/Libraries/LibSanitizer/libLibUBSanitizerStatic.a && /home/d4gobert/devel/serenity/Toolchain/Local/x86_64/bin/x86_64-pc-serenity-gcc-ar -rcs /home/d4gobert/devel/serenity/Build/x86_64/Userland/Libraries/LibC/libc.a *.o
[2/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GitCommitLexer.cpp.o
[3/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GitCommitSyntaxHighlighter.cpp.o
[4/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GML/SyntaxHighlighter.cpp.o
[5/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GlyphMapWidget.cpp.o
[6/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GML/Lexer.cpp.o
[7/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/Icon.cpp.o
[8/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GML/Parser.cpp.o
[9/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GroupBox.cpp.o
[10/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/IncrementalSearchBanner.cpp.o
[11/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/FileSystemModel.cpp.o
FAILED: Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/FileSystemModel.cpp.o 
/usr/bin/ccache /home/d4gobert/devel/serenity/Toolchain/Local/x86_64/bin/x86_64-pc-serenity-g++ --sysroot=/home/d4gobert/devel/serenity/Build/x86_64/Root -DENABLE_COMPILETIME_FORMAT_CHECK -DLibGUI_EXPORTS -DSANITIZE_PTRS -I/home/d4gobert/devel/serenity/. -I/home/d4gobert/devel/serenity/Userland/Libraries -I/home/d4gobert/devel/serenity/Userland/Libraries/LibC -I/home/d4gobert/devel/serenity/Userland/Libraries/LibCrypt -I/home/d4gobert/devel/serenity/Userland/Libraries/LibSystem -I/home/d4gobert/devel/serenity/Userland/Services -I/home/d4gobert/devel/serenity/Userland -I/home/d4gobert/devel/serenity/Build/x86_64 -I/home/d4gobert/devel/serenity/Build/x86_64/Userland/Services -I/home/d4gobert/devel/serenity/Build/x86_64/Userland/Libraries -I/home/d4gobert/devel/serenity/Build/x86_64/Userland -pie -fpic -std=c++20 -fPIC -fdiagnostics-color=always -Wall -Wextra -Werror -Wno-address-of-packed-member -Wcast-qual -Wdeprecated-copy -Wduplicated-cond -Wformat=2 -Wimplicit-fallthrough -Wlogical-op -Wmisleading-indentation -Wmissing-declarations -Wnon-virtual-dtor -Wsuggest-override -Wno-unknown-warning-option -Wundef -Wunused -Wno-unused-command-line-argument -Wwrite-strings -fdiagnostics-color=always -fno-delete-null-pointer-checks -ffile-prefix-map=/home/d4gobert/devel/serenity=. -fno-exceptions -fno-semantic-interposition -fsized-deallocation -fstack-clash-protection -fstack-protector-strong -gdwarf-4 -g1 -Wno-literal-suffix -Wno-maybe-uninitialized -Wno-expansion-to-defined -Wcast-align -Wdouble-promotion -O2 -MD -MT Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/FileSystemModel.cpp.o -MF Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/FileSystemModel.cpp.o.d -o Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/FileSystemModel.cpp.o -c /home/d4gobert/devel/serenity/Userland/Libraries/LibGUI/FileSystemModel.cpp
/home/d4gobert/devel/serenity/Userland/Libraries/LibGUI/FileSystemModel.cpp: In member function 'virtual GUI::Variant GUI::FileSystemModel::data(const GUI::ModelIndex&, GUI::ModelRole) const':
/home/d4gobert/devel/serenity/Userland/Libraries/LibGUI/FileSystemModel.cpp:547:63: error: cannot convert 'AK::DeprecatedString' to 'const AK::String&'
  547 |             return URL::create_with_file_scheme(node.full_path()).serialize();
      |                                                 ~~~~~~~~~~~~~~^~
      |                                                               |
      |                                                               AK::DeprecatedString
In file included from /home/d4gobert/devel/serenity/Userland/Libraries/LibCore/MimeData.h:12,
                 from /home/d4gobert/devel/serenity/Userland/Libraries/LibGUI/Model.h:18,
                 from /home/d4gobert/devel/serenity/Userland/Libraries/LibGUI/AbstractView.h:11,
                 from /home/d4gobert/devel/serenity/Userland/Libraries/LibGUI/FileSystemModel.cpp:17:
/home/d4gobert/devel/serenity/./AK/URL.h:101:63: note:   initializing argument 1 of 'static AK::ErrorOr<AK::URL> AK::URL::create_with_file_scheme(const AK::String&, const AK::String&, const AK::String&)'
  101 |     static ErrorOr<URL> create_with_file_scheme(String const& path, String const& fragment = {}, String const& hostname = {});
      |                                                 ~~~~~~~~~~~~~~^~~~
At global scope:
cc1plus: note: unrecognized command-line option '-Wno-unused-command-line-argument' may have been intended to silence earlier diagnostics
cc1plus: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
[12/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/HeaderView.cpp.o
[13/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/GML/AutocompleteProvider.cpp.o
[14/2462] Building CXX object Userland/Libraries/LibGUI/CMakeFiles/LibGUI.dir/FontPicker.cpp.o
ninja: build stopped: subcommand failed.
FAILED: serenity-prefix/src/serenity-stamp/serenity-build /home/d4gobert/devel/serenity/Build/superbuild-x86_64/serenity-prefix/src/serenity-stamp/serenity-build 
cd /home/d4gobert/devel/serenity/Build/x86_64 && /usr/bin/cmake --build .
ninja: build stopped: subcommand failed.
